charts/other/myprecious/templates/network-policies/ciliumnetworkpolicy-permit-any-egress-minio.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "permit-any-egress-minio"
spec:
  endpointSelector: {}
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: minio
        app.kubernetes.io/name: minio
    toPorts:
      - ports:
        - port: '9000'
          protocol: TCP
