charts/other/myprecious/templates/network-policies/ciliumnetworkpolicy-permit-csi-nodeplugin-rclone-ingress-alldebrid-webdav.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "permit-csi-nodeplugin-rclone-ingress-alldebridwebdav"
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: alldebridwebdav
  ingress:
  # - fromEndpoints:
  #   - matchLabels:
  #       k8s:io.kubernetes.pod.namespace: csi-rclone
  #       app: csi-nodeplugin-rclone
  - toPorts:
      - ports:
        - port: '9999'
          protocol: TCP
