charts/other/myprecious/templates/network-policies/ciliumnetworkpolicy-permit-csi-nodeplugin-rclone-ingress-zurg.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "permit-csi-nodeplugin-rclone-ingress-zurg"
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: zurg
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: csi-rclone
        app: csi-nodeplugin-rclone
    toPorts:
      - ports:
        - port: '9999'
          protocol: TCP
