charts/other/myprecious/templates/network-policies/ciliumnetworkpolicy-permit-homepage-egress-elfbot-kube-apiserver copy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "permit-kubernetes-dashboard-egress-elfbot-kube-apiserver"
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: kubernetesdashboard
  egress:
    - toEntities:
        - kube-apiserver
