charts/other/myprecious/templates/network-policies/ciliumnetworkpolicy-permit-homepage-egress-elfbot-kube-apiserver.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "permit-homepage-egress-elfbot-kube-apiserver"
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: homepage
  egress:
    - toEntities:
        - kube-apiserver
