charts/other/myprecious/templates/network-policies/ciliumnetworkpolicy-permit-iceberg-egress-torrentio.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "permit-iceberg-egress-torrentio"
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: iceberg
  egress:
  - toEndpoints:
    - matchLabels:
        app.kubernetes.io/name: torrentio-addon
        k8s:io.kubernetes.pod.namespace: torrentio
    toPorts:
      - ports:
        - port: '7001'
          protocol: TCP
  - toEndpoints:
    - matchLabels:
        app.kubernetes.io/name: torrentio-addon-internal
        k8s:io.kubernetes.pod.namespace: torrentio
    toPorts:
      - ports:
        - port: '7001'
          protocol: TCP
