charts/other/myprecious/templates/network-policies/ciliumnetworkpolicy-permit-knightcrawler-egress-torrentio-mongodb.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "permit-knightcrawler-egress-torrentio-mongodb"
spec:
  endpointSelector:
    matchLabels:
      app.elfhosted.com/name: knightcrawler
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: torrentio
        app.kubernetes.io/name: mongodb
    toPorts:
      - ports:
        - port: '27017'
          protocol: TCP
