charts/other/myprecious/templates/network-policies/ciliumnetworkpolicy-permit-pgadmin-egress-torrentio-postgresql.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "permit-pgadmin-egress-torrentio-postgresql"
spec:
  endpointSelector:
    matchLabels:
      app.elfhosted.com/name: pgadmin
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: torrentio
        # Disabled until we update cilium's recognized labels during maintenance
        # cnpg.io/cluster: torrentio
        # cnpg.io/instanceRole: replica
    toPorts:
      - ports:
        - port: '5432'
          protocol: TCP
