charts/other/myprecious/templates/network-policies/ciliumnetworkpolicy-permit-torrentio-egress-torrentio-mongodb.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "permit-torrentio-egress-torrentio-mongodb"
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: torrentio
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: torrentio
        app.kubernetes.io/name: mongodb
    toPorts:
      - ports:
        - port: '27017'
          protocol: TCP
