charts/other/myprecious/templates/network-policies/ciliumnetworkpolicy-permit-torrentio-egress-torrentio-postgresql.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "permit-torrentio-egress-torrentio-postgresql"
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: torrentio
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: torrentio
        cnpg.io/cluster: torrentio
        role: replica
    toPorts:
      - ports:
        - port: '5432'
          protocol: TCP
