charts/other/myprecious/templates/network-policies/networkpolicy-restrict-egress-from-qbittorrent.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-egress-from-qbittorrent
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: qbittorrent
  policyTypes:
    - Egress
  egress:
    - to:
      - ipBlock:
          cidr: 45.136.48.154/32 # goblin01
      - ipBlock:
          cidr: 45.136.48.105/32 # goblin02
      ports:
        - protocol: UDP
          port: 51820
